tests/rosetta/out/Zig/anagrams.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenanagrams1155722193/001/prog.zig:40:9: error: local variable is never mutated
/tmp/TestMochiZigGoldenanagrams1155722193/001/prog.zig:40:9: note: consider using 'const'
/tmp/TestMochiZigGoldenanagrams1155722193/001/prog.zig:142:21: error: local variable is never mutated
/tmp/TestMochiZigGoldenanagrams1155722193/001/prog.zig:142:21: note: consider using 'const'
